# HAIWM

./: README.md  compute_norm_stats.py  config.yaml  config_libero.yaml  convert_to_lerobot_lerobotds.py  download_wandb.py  evaluate.py  hf_upload_dataset.py  jmdataload.py  load_jetmax_dataset.py  load_libero_dataset.py  loss_self-attention.py  losses.py  misc.py  normalize.py  options.py  pre_process.py  pyproject.toml  train.py  train_ddp.sh  verify_libero_integration.py  xlstm_env.yaml
envs/: model_inference.py  pusht_env.py  robosuite_env.py
gazebo_envs/: README.RD  cam_process.py  gen_rand_object.py  gen_rand_redbox.py  joint_states_process.py  load_container_model.py  move_test.py  pub_sign.py  run.py  take_rand_box.py
model/: baseline_bc.py  convlstm.py  critic.py  decoders.py  language_encoder.py  model_utils.py  models.py  pusht_critic.py  pusht_decoders.py  pustht_models.py  snn.py
publisher/: act_publisher.py  go_home.py  jetmax_fk.py  jetmax_ik.py  jetmax_kinematics.py
pusht/: pusht_config.yaml  pusht_image_dataset.py  pusht_losses.py  pusht_misc.py  pusht_train.py
script/: analyze_results.py  debug_overfit.py  download_wandb.py  evaluate_success_rate.py  latenz_visualize.py  load_jetmax_dataset.py  load_libero_dataset.py  metrics.py  verify_overfit.py  visualize_attention.py  visualize_attention_enhanced.py  visualize_libero_datasets.py  visualize_training_curves.py  visualize_tsne.py
